--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "bot.js",
   "dependencies": {
     "telegraf": "^4.12.0",
-    "axios": "^1.4.0",
-    "user-agents": "^1.0.1265"
+    "axios": "^1.4.0"
   },
   "scripts": {
     "start": "node bot.js"
