--- a/package.json
+++ b/package.json
@@ -1,13 +1,7 @@
 {
-  "name": "dexr-ig-bot",
-  "version": "1.0.0",
-  "description": "Instagram Mass Creator by Dexr",
-  "main": "bot.js",
   "dependencies": {
     "telegraf": "^4.12.0",
-    "axios": "^1.4.0"
-  },
-  "scripts": {
-    "start": "node bot.js"
+    "axios": "^1.4.0",
+    "https-proxy-agent": "^7.0.0"
   }
 }
